Temporary fix episode list with overflow, will improve later

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -39,7 +39,7 @@ a {
     font-weight: normal;
     font-size: 18px;
     box-sizing: border-box;
-    color: black;
+    color: white;
     text-decoration: none;
     padding-right: 20px;
     padding: 20px;
